style payments table, prevent ... from showing up on mobile

--- a/wp-content/themes/make-community/scss/buddypress.scss
+++ b/wp-content/themes/make-community/scss/buddypress.scss
@@ -71,7 +71,16 @@ div.pagination,
     width: 165px;
 }
 .buddypress .main-navs.bp-navs {
-	li { padding: 10px !important; }
+	ul {
+		display: flex;
+		flex-wrap: wrap;
+		background: white;
+		li { 
+			padding: 10px !important; 
+			flex: 1;
+			margin-bottom: 2px !important;
+		}
+	}
 	li.object-nav-menu-button a.object-nav-menu-button-a {
 		height: 16px;
 	}
@@ -418,7 +427,7 @@ li:has(.message-content:empty), li:has(.message-content > p:empty) { display: no
 		}
 	}
 	.mp_wrapper {
-		#mepr-account-subscriptions-table {
+		#mepr-account-subscriptions-table, #mepr-account-payments-table {
 			td, th {
 				border-left: 0px !important;
 				border-right: 0px !important;
@@ -465,7 +474,7 @@ li:has(.message-content:empty), li:has(.message-content > p:empty) { display: no
 			border-bottom: 0px;
 			border-top-left-radius: 5px;
 			border-top-right-radius: 5px;
-			margin-right: 10px;
+			margin-right: 5px;
 			&.current {
 				background: #f1f1f1;
 			}
